Updated location references in index.html from "Brazil" to "Brasil" for consistency. Enhanced project card layout in index.html by introducing a new structure for client information. Adjusted CSS styles in style.css to improve grid layout and visual hierarchy, including specific adjustments for language cards and project titles.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="experience-company">V8.TECH</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 02/2022 - Presente | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -161,7 +161,7 @@
                 <div class="experience-company">GRUPO SBF</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 12/2020 - 01/2022 | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -179,7 +179,7 @@
                 <div class="experience-company">CENTAURO</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 06/2018 - 11/2020 | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -196,7 +196,7 @@
                 <div class="experience-company">CENTAURO</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 06/2018 - 12/2020 | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -211,7 +211,7 @@
                 <div class="experience-company">CENTAURO</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 01/2013 - 05/2018 | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -226,7 +226,7 @@
                 <div class="experience-company">NOVA PONTOCOM (GPA)</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 05/2011 - 12/2012 | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -241,7 +241,7 @@
                 <div class="experience-company">UOL Diveo</div>
                 <div class="experience-period">
                     <i class="fas fa-calendar"></i> 03/2008 - 12/2011 | 
-                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brazil
+                    <i class="fas fa-map-marker-alt"></i> São Paulo, Brasil
                 </div>
                 <div class="experience-description">
                     <ul>
@@ -414,10 +414,11 @@
                 <div class="project-card" data-category="modernization">
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> Centauro
+                        <div class="project-client">Centauro</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -447,10 +448,11 @@
                 <div class="project-card" data-category="realtime">
                     <div class="project-content">
                         <h3 class="project-title">Arquitetura de Eventos em Tempo Real</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> Centauro
+                        <div class="project-client">Centauro</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -479,10 +481,11 @@
                 <div class="project-card" data-category="omnichannel">
                     <div class="project-content">
                         <h3 class="project-title">Jornada Omnichannel</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> Centauro
+                        <div class="project-client">Centauro</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -511,10 +514,11 @@
                 <div class="project-card" data-category="security">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> SolFacil
+                        <div class="project-client">SolFacil</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -543,10 +547,11 @@
                 <div class="project-card" data-category="performance">
                     <div class="project-content">
                         <h3 class="project-title">CLI para Performance e Tuning "dbt-perf"</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> SolFacil
+                        <div class="project-client">SolFacil</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -576,10 +581,11 @@
                 <div class="project-card" data-category="distribution">
                     <div class="project-content">
                         <h3 class="project-title">Distribuição de Carga - AWS Redshift DataShare</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> SolFacil
+                        <div class="project-client">SolFacil</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -608,10 +614,11 @@
                 <div class="project-card" data-category="finops">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de FinOps - Databricks e AWS</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> Mills
+                        <div class="project-client">Mills</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
@@ -641,10 +648,11 @@
                 <div class="project-card" data-category="analytics">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Integração e Analytics para Clientes</h3>
-                        <hr class="project-divider">
-                        <div class="project-info">
-                            <strong>Cliente:</strong> Mills
+                        <div class="project-client">Mills</div>
+                        <div class="project-meta">
+                            <span><i class="fas fa-map-marker-alt"></i> São Paulo, Brasil</span>
                         </div>
+                        <hr class="project-divider">
                         <br>
                         <div class="project-story">
                             <div class="story-section">
