Updated skill section in index.html by renaming "Habilidades Técnicas" to "Stack Tecnológico" and added new technology badges for FinOps, Streamlit, and MLOps. Removed outdated programming language badges for improved clarity and relevance.

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <section class="section" id="habilidades">
             <h2 class="section-title">
                 <i class="fas fa-code"></i>
-                Habilidades Técnicas
+                Stack Tecnológico
             </h2>
             <div class="skills-grid">
                 <div class="skill-category">
@@ -333,6 +333,7 @@
                         <li><span class="badge badge-cloud-platforms">AWS</span></li>
                         <li><span class="badge badge-cloud-platforms">Google Cloud</span></li>
                         <li><span class="badge badge-cloud-platforms">Azure</span></li>
+                        <li><span class="badge badge-cloud-platforms">FinOps</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -362,6 +363,7 @@
                         <li><span class="badge badge-analytics-visualization">Power BI</span></li>
                         <li><span class="badge badge-analytics-visualization">Tableau</span></li>
                         <li><span class="badge badge-analytics-visualization">Apache Superset</span></li>
+                        <li><span class="badge badge-analytics-visualization">Streamlit</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -372,10 +374,6 @@
                         <li><span class="badge badge-programming-languages">SQL</span></li>
                         <li><span class="badge badge-programming-languages">PL/SQL</span></li>
                         <li><span class="badge badge-programming-languages">Transact-SQL</span></li>
-                        <li><span class="badge badge-programming-languages">JavaScript</span></li>
-                        <li><span class="badge badge-programming-languages">CSS</span></li>
-                        <li><span class="badge badge-programming-languages">HTML</span></li>
-                        <li><span class="badge badge-programming-languages">Streamlit</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -386,15 +384,14 @@
                         <li><span class="badge badge-architecture-tools">Data Mesh</span></li>
                         <li><span class="badge badge-architecture-tools">Microservices</span></li>
                         <li><span class="badge badge-architecture-tools">Event-Driven</span></li>
-                        <li><span class="badge badge-architecture-tools">FinOps</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h4><i class="fas fa-brain"></i> AI & Machine Learning Engineering</h4>
                     <ul class="skill-list">
-                        <li><span class="badge badge-ai-machine-learning">Google Cloud AI/ML</span></li>
                         <li><span class="badge badge-ai-machine-learning">Machine Learning</span></li>
                         <li><span class="badge badge-ai-machine-learning">Data Science</span></li>
+                        <li><span class="badge badge-ai-machine-learning">MLOps</span></li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -412,8 +409,6 @@
                     <h4><i class="fas fa-cloud"></i> Infrastructure as Code & DevOps</h4>
                     <ul class="skill-list">
                         <li><span class="badge badge-iac-devops">Terraform</span></li>
-                        <li><span class="badge badge-iac-devops">AWS CloudFormation</span></li>
-                        <li><span class="badge badge-iac-devops">Ansible</span></li>
                         <li><span class="badge badge-iac-devops">Docker</span></li>
                         <li><span class="badge badge-iac-devops">Kubernetes</span></li>
                         <li><span class="badge badge-iac-devops">Jenkins</span></li>
