Updated index.html to include new navigation links for "Competências," "Stack," "Formação," "Idiomas," and "Objetivos." Adjusted CSS styles in style.css to improve navbar layout with reduced gap and padding, and enhanced dark mode styles for active links. Enhanced JavaScript in main.js to manage active link states during scrolling for better user experience.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
             <ul class="navbar-menu">
                 <li><a href="#sobre" class="active">Sobre</a></li>
                 <li><a href="#experiencia">Experiência</a></li>
+                <li><a href="#competencias">Competências</a></li>
+                <li><a href="#habilidades">Stack</a></li>
                 <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#formacao">Formação</a></li>
+                <li><a href="#idiomas">Idiomas</a></li>
+                <li><a href="#objetivos">Objetivos</a></li>
             </ul>
             <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Alternar modo escuro">
                 <i class="fas fa-moon"></i>
